--- a/index.html
+++ b/index.html
@@ -1,16 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <title>Моя презентация</title>
+    <title>Мой долг/<title>
 </head>
 <body>
-    
-  <p>
-  Нажмите, чтобы скачать или открыть презентацию:
-  <a href="СетьВводный.pptx">Презентация в формате •pptx</a> 
-  Нажмите, чтобы скачать или открыть index. html:
-  <a href="index.html">Файл проверки работы с кириллицей .html</a> 
-  </p>
-
 </body>
 </htm|>
