--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <title>Мой блог/<title>
 </head>
 <body>
-    <p>Иконки:
+    <p>Иконки:<a href="https://www.flaticon.com/ru/free-icons/-" title="Рождественская елка иконки">Рождественская елка иконки от IconMarketPK - Flaticon</a>
     </p>
 </body>
 </htm|>
