--- a/index.html
+++ b/index.html
@@ -3,7 +3,18 @@
 <head>
     <title>Мой блог/<title>
 </head>
-<body>
+<body><h2> 25.12 , 2025</h2>
+    <img src=“Icons/test.html.png” alt=“Новый год”>
+Поздравление с Наступающим 2026 годом читайте <a href=“Congratulations2026.html”> здесь.</a>
+<h2> 15 октября , 2025</h2>
+<p>
+Я сделала Новогодние кроссворды для сайта <a href=“http://адрес сайта друга”  title=“Блог моего друга”Сайт моего друга</a>
+</p>
+<h2> 1 сентября , 2025</h2>
+<blockquote>Путешествие в тысячу миль начинается с одного шага (Лао Цзы) </blockquote>
+<p>
+Оставляю в прошлом скучную неинтересную локальную файловую систему ради Всемирной паутины.
+</p>
     <p>Иконки:<a href="https://www.flaticon.com/ru/free-icons/-" title="Рождественская елка иконки">Рождественская елка иконки от IconMarketPK - Flaticon</a>
     </p>
 </body>
