--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Мой блог/<title>
+    <link type=“text/css” rel=“stylesheet” href=“style.css” />
 </head>
 <body><h2> 25.12 , 2025</h2>
     <img src=“Icons/test.html.png” alt=“Новый год”>
