--- a/Congratulations2026.html
+++ b/Congratulations2026.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Поздравление!</title>
 </head>
+    <title>Поздравление!</title>
+
 <body>
     <p>Приближается один из любимых праздников в России — Новый год. Воздух наполняется ароматом мандаринов и еловых веток, улицы озаряются яркими гирляндами, а в каждом доме начинается подготовка к главному волшебству года. Это время, когда семьи собираются за праздничным столом, дети с нетерпением ждут Деда Мороза, а взрослые с теплотой вспоминают прошедшие моменты и строят планы на будущее. Новый год — это не просто смена календаря, это символ надежды, чуда и новых возможностей.</p> 
     <p>В преддверии праздника многие ищут способы весело провести время, особенно в кругу семьи или друзей. Популярным развлечением становится решение головоломок: русский кроссворд помогает проверить свою эрудицию и лексический запас, а английский кроссворд — отличный способ поддержать навыки иностранного языка в игровой форме. Такие занятия не только развивают мышление, но и создают атмосферу дружеского соперничества и веселья, идеально дополняя новогоднее настроение.</p> 
