--- a/index.html
+++ b/index.html
@@ -105,3 +105,4 @@
   </script>
 </body>
 </html>
+    <span style="background: linear-gradient(90deg, #ff0000, #00ff00); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">Текст</span> 
