--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <title>Мой блог/<title>
     <link type=“text/css” rel=“stylesheet” href=“style.css” />
 </head>
-<body><h2> 25.12 , 2025</h2>
-    <img src=“Icons/test.html.png” alt=“Новый год”>
+<body>
+    <h2> 3 декабря , 2025</h2>
+    <img src=“Icons/free-icon-sock-2305759.png” alt=“Новый год”>
 Поздравление с Наступающим 2026 годом читайте <a href=“Congratulations2026.html”> здесь.</a>
 <h2> 15 октября , 2025</h2>
 <p>
@@ -17,6 +18,10 @@
 Оставляю в прошлом скучную неинтересную локальную файловую систему ради Всемирной паутины.
 </p>
     <p>Иконки:<a href="https://www.flaticon.com/ru/free-icons/-" title="Рождественская елка иконки">Рождественская елка иконки от IconMarketPK - Flaticon</a>
+    </p>
+    <h2> 15 декабря , 2025</h2>
+    <p>
+        
     </p>
 </body>
 </htm|>
