--- a/index.html
+++ b/index.html
@@ -110,4 +110,10 @@
   </script>
 </body>
 </html>
-    <span style="background: linear-gradient(90deg, #ff0000, #00ff00); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">Текст</span> 
+    <!DOCTYPE html>
+<html>
+<head>
+  <style>body{margin:0;background:linear-gradient(135deg,#ff0000,#ff8000,#ffff00,#00ff00,#00ffff,#0000ff,#8000ff);background-size:400% 400%;animation:gradient 15s ease infinite}@keyframes gradient{0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}</style>
+</head>
+<body></body>
+</html>
