--- a/index.html
+++ b/index.html
@@ -121,8 +121,9 @@
         <img src="Icons/free-icon-christmas-tree-4060984.png" alt="">
 <h2> 12 января , 2026</h2>
 домены: 
-   
-       io
+   sofaxxxx
+   github
+   io
    .
    </p>
    </body>
