--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
   </div>
 
   <h2>2. Шифрование</h2>
-  <p>Сообщение: <code>m = 2</code> (например, «анализ готов»)</p>
+  <p  class="quote" >  Сообщение: <code>m = 2</code> (например, «анализ готов»)</p>
   <p>Условия: <code>0 &lt; m &lt; n</code> и <code>НОД(m, n) = 1</code> → выполнены.</p>
   <p>Шифруем: <code>C = m<sup>e</sup> mod n = 2<sup>3</sup> mod 15 = 8</code></p>
   <p>→ <strong>Шифротекст: C = 8</strong></p>
