--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html>
 <head>
     <title>Мой блог/<title>
-    <link type=“text/css” rel=“stylesheet” href=“style.css” />
+    <link type="text/css" rel="stylesheet" href="style.css" />
 </head>
 <body>
     <h2> 3 декабря , 2025</h2>
-<img src=“Icons/free-icon-sock-2305759.png” alt=“Новый год”>
-Поздравление с Наступающим 2026 годом читайте <a href=“Congratulations2026.html”> здесь.</a>
+<img src="Icons/icon.png" alt="Новый год">
+Поздравление с Наступающим 2026 годом читайте <a href="Congratulations2026.html"> здесь.</a>
 <h2> 15 октября , 2025</h2>
 <p>
-Я сделала Новогодние кроссворды для сайта <a href=“http://адрес сайта друга”  title=“Блог моего друга”Сайт моего друга</a>
+Я сделала Новогодние кроссворды для сайта <a href=“http://адрес сайта друга”  title=“Блог моего друга”>Сайт моего друга</a>
 </p>
 <h2> 1 сентября , 2025</h2>
-<blockquote>Путешествие в тысячу миль начинается с одного шага (Лао Цзы) </blockquote>
+<blockquote class="q">Путешествие в тысячу миль начинается с одного шага (Лао Цзы) </blockquote>
 <p>
 Оставляю в прошлом скучную неинтересную локальную файловую систему ради Всемирной паутины.
 </p>
@@ -23,16 +23,7 @@
 <p>
  <a href="pooo.odt"> поздравляю с 2026</a> 
     </p>
-</body>
-   <body> 
-</html>
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <title>Шифр Цезаря</title>
-</head>
-<body>
+
   <script>
     document.write(new Date().toLocaleDateString('ru-RU', {
       year: 'numeric',
