--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Мой блог/<title>
+    <title>Мой блог</title>
     <link type="text/css" rel="stylesheet" href="style.css" />
 </head>
 <body>
